ECA-2413: Trivial fix. Just made sure that removing an end entity also wiped it from the cache in AddedUserMemory. Also changed the data structure in AddedUserMemory from a messy Vector (jack-of-no-trades) to a cleaner LinkedList (at least iterates quickly)
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@13399 37aeb1de-b14b-0410-9a0e-82b28170d228